force-app/main/default/objects/Blacklisted_Word__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Enter a short description of the blacklist word, phrase or expression. Particularly useful add when describing a custom expression</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a short description of the blacklist word, phrase or expression. Particularly useful add when describing a custom expression</inlineHelpText>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>