force-app/main/default/objects/Blacklisted_Word__c/fields/Substitution__c.field-meta.xml
<CustomField>
    <fullName>Substitution__c</fullName>
    <defaultValue>&quot;****&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Substitution</label>
    <length>200</length>
    <type>Text</type>
</CustomField>