force-app/main/default/objects/Blacklisted_Word__c/fields/Word__c.field-meta.xml
<CustomField>
    <fullName>Word__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Word or Phrase</label>
    <length>200</length>
    <type>Text</type>
</CustomField>