force-app/main/default/objects/Blacklisted_Word__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Word__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>